# media-workbench

./: .gitignore  AGENTS.md  LICENSE  README.md  哔哩哔哩下载场景功能清单、架构设计、技术选型.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  media.py  schemas.py  task_executor.py  utils.py
backend/app/extractors/: __init__.py  base.py  yt_dlp_bilibili.py
backend/tests/: test_api.py  test_db.py  test_extractor_normalization.py  test_media.py  test_schemas.py  test_task_executor.py  test_utils.py
docs/: API接口说明.md  开发启动说明.md  文档索引.md  测试验收清单.md  用户使用指南.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.test.ts  api.ts  batch.ts  styles.css
scripts/: check-env.sh  dev.sh
